# Dynamic_Imitation

./:  git-proxy.sh  .cproject  .project  CMakeLists.txt  control_input.cpp  control_input.h  estimated_output.txt  f_cap.cpp  f_estimate.cpp  f_estimate.h  function_estimate.cpp  function_estimate.h  gaussPdf.cpp  gaussPdf.h  gnu_plot  gnu_plot~  gradient_V.cpp  gradient_V.h  input_output.txt  load_f_data.cpp  load_f_data.h  load_f_data.hpp  main.cpp  mean.txt  priors.txt  sigma.txt
Debug/: f_cap.d  function_estimate.d  makefile  sources.mk  subdir.mk
html/: annotated.html  classes.html  classload__function__data-members.html  classload__function__data.html  files.html  function__estimate_8h_source.html  functions.html  functions_func.html  functions_vars.html  index.html  load__f__data_8h_source.html  load__f__data_8hpp_source.html
html/search/: all_6c.js  all_70.js  all_72.js  functions_7e.js  search.js  variables_6d.js  variables_73.js
latex/: annotated.tex  classload__function__data.tex  doxygen.sty  refman.tex
